# mgr

./: .gitignore  mnist.ipynb  mnist_2.ipynb  plan.txt  pyproject.toml  todo_nakoniec.txt
helpers/: helpers.ipynb
notebooks/: cifar10-fgsm.ipynb
notebooks2/: mnist-fgsm.ipynb
praca_magisterska/: bibliografia.bib  main.aux  main.bcf  main.fdb_latexmk  main.fls  main.run.xml  main.tex
praca_magisterska/rozdzialy/: 1_srodowisko_badawcze.aux  1_zbiory_danych.aux  1_zbiory_danych.tex  2_badania_mnist.aux  2_srodowisko_badawcze.aux  2_srodowisko_badawcze.tex  3_badania_cifar.aux  3_badania_mnist.aux  3_badania_mnist.tex  4_badania_cifar.aux  4_badania_cifar.tex  5_podsumowanie.aux  5_podsumowanie.tex  badania.aux  badania_cifar.aux  badania_mnist.aux  nazwa_pliku.aux
src/: config.py  data_manager.py  explainers.py  metrics.py  model_trainer.py  paths.py  perturbations.py  utils.py  xai_experiment.py
training_notebooks/: CIFAR10.ipynb  MNIST.ipynb  cifar10_training.ipynb
trainings/: mnist_training.ipynb
xai_analysis/: cifar10-fgsm.ipynb  mnist-fgsm.ipynb  mnist.ipynb  mnist2.ipynb
xai_notebooks/: 1_MNIST_GaussianNoise.ipynb  2_MNIST_FGSM.ipynb  4_CIFAR10_FGSM.ipynb  CIFAR10_FGSM.ipynb  CIFAR10_GaussianNoise.ipynb  MNIST_FGSM.ipynb  MNIST_GaussianNoise.ipynb
