[project]
name = "mgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.7.0",
    "foolbox>=3.3.4",
    "ipywidgets>=8.1.8",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "numba>=0.57.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.42.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
